--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     ],
     "require": {
         "php": ">=5.3.1",
-		"eden-php/core": "1.*",
-		"eden-php/system": "1.*"
+		"eden/core": "1.*",
+		"eden/system": "1.*"
     },
     "autoload": {
          "psr-0": { "Eden\\Mail\\": "" }
