--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,9 @@
     ],
     "require": {
         "php": ">=5.3.1",
-		"eden/core": "1.*",
-		"eden/system": "1.*"
+		"eden/file": "4.x-dev"
     },
     "autoload": {
-         "psr-0": { "Eden\\Mail\\": "" }
-    },
-	"target-dir": "Eden/Mail"
+         "psr-4": { "Eden\\File\\": "/src" }
+    }
 }
