--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,13 @@
     ],
     "require": {
         "php": ">=5.3.1",
+		"eden/core": "4.x-dev",
+		"eden/string": "4.x-dev",
+		"eden/array": "4.x-dev",
+		"eden/path": "4.x-dev",
 		"eden/file": "4.x-dev"
     },
     "autoload": {
-         "psr-4": { "Eden\\Mail\\": "/src" }
+         "psr-4": { "Eden\\Mail\\": "src/" }
     }
 }
