--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
         }
     ],
     "require": {
-        "php": ">=5.3.1",
-		"eden/core": "4.x-dev",
-		"eden/string": "4.x-dev",
-		"eden/array": "4.x-dev",
-		"eden/path": "4.x-dev",
-		"eden/file": "4.x-dev"
+        "php": ">=5.4.1",
+		"eden/core": "4.*",
+		"eden/string": "4.*",
+		"eden/array": "4.*",
+		"eden/path": "4.*",
+		"eden/file": "4.*"
     },
     "autoload": {
          "psr-4": { "Eden\\Mail\\": "src/" }
