added reference to forked Eden/Core
related to issue #30

--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,15 @@
             "email": "cblanquera@openovate.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/beeproger/core"
+        }
+    ],
     "require": {
         "php": ">=5.4.1",
-		"eden/core": "4.*",
+		"eden/core": "4.0.3.1",
 		"eden/string": "4.*",
 		"eden/array": "4.*",
 		"eden/path": "4.*",
