--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "email": "cblanquera@openovate.com"
         },
     {
-        "name": "Christian Blanquera",
+        "name": "Yurii Myronchuk",
         "email": "bladeroot@gmail.com"
     }
     ],
